אלכסנדר, שיטת אוארים, אירי טוענת עוד ועדלכסנדר, צו

--- a/index.html
+++ b/index.html
@@ -291,6 +291,8 @@ Error message and password prompt
 
 <li>גבר פריבילגי</li>
 
+<li>גבריאל פורה</li>
+
 <li>גואן יין</li>
 
 <li>גורה</li>
@@ -531,6 +533,8 @@ Error message and password prompt
 
 <li>עץ המשפחה של אווה</li>
 
+<li>פ.מ.אלכסנדר</li>
+
 <li>פאי אגסים עם קרם גבינה ושקדים</li>
 
 <li>פאי דובדבנים</li>
@@ -564,6 +568,8 @@ Error message and password prompt
 <li>צ'נג</li>
 
 <li>צ'רלי קאופמן</li>
+
+<li>צווארים</li>
 
 <li>צלי בשר עם תפוחי אדמה</li>
 
@@ -620,6 +626,8 @@ Error message and password prompt
 <li>תשבץ למאומנים</li>
 
 <li>bg</li>
+
+<li>Draft of 'עם יויו באמסטרדם'</li>
 
 <li>English</li>
 
@@ -8338,7 +8346,7 @@ Error message and password prompt
 <pre>{
     &quot;tiddlers&quot;: {
         &quot;Untitled&quot;: {
-            &quot;text&quot;: &quot;http://coensisters.org/rss.xml\r\nהאחיות כהן&quot;,
+            &quot;text&quot;: &quot;file:///C:/Users/user/Desktop/coen%20sisters/pictures/galoot.jpg&quot;,
             &quot;title&quot;: &quot;Untitled&quot;
         }
     }
@@ -8447,7 +8455,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[הרקוויאם של פורה]] [[לורין היל]] [[בחוות החיות]] [[זקופי הגו]] [[וויקליף ז'אן]]" title="$:/StoryList">
+<div list="[[קפיץ ספירלי]] [[אירי טוענת]] [[עושים שלום]] [[יויו וגורה]] אלה [[עם יויו באמסטרדם]] [[Draft of 'עם יויו באמסטרדם']] [[דןדן נסע]] יויו [[וויקליף ז'אן]] [[לורין היל]] [[גבריאל פורה]] [[הרקוויאם של פורה]] [[שיטת אלכסנדר]] גלות [[דיוויד בואי]] צווארים [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8467,7 +8475,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170601233136181" title="$:/temp/search">
+<div created="20161023184814872" modified="20170602205336293" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9105,6 +9113,16 @@ Error message and password prompt
 
 דווקא כשמדובר בנשים, המילה אישה, עושה לי את זה.</pre>
 </div>
+<div created="20170602180000251" modified="20170602184348806" tags="[[אחיות חוץ]] [[אירי טוענת]]" title="גבריאל פורה">
+<pre>[img[pictures/gabriel-faure.jpg]]
+
+!!![[גורה]]:
+
+אירי טוענת, שגם [[גבריאל פורה|https://en.wikipedia.org/wiki/Gabriel_Faur%C3%A9]] המיוסר היה [[גייז|https://en.wikipedia.org/wiki/Gender]].
+
+כמו כן היא סבורה, שגם המנעד הג'נדריאלי ההולך ומתרחב, קשור לחיים כאן [[בגלות|גלות]].
+</pre>
+</div>
 <div created="20170324140400308" modified="20170424213754317" tags="[[אחות כהן]]" title="גואן יין">
 <pre>[img[pictures/guen-inn.jpg]]
 
@@ -9147,7 +9165,7 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20170105170620001" modified="20170601165738854" tags="[[אירי טוענת]]" title="גלות">
+<div created="20170105170620001" modified="20170603235316891" tags="[[אירי טוענת]]" title="גלות">
 <pre>[img[pictures/galoot.jpg]]
 
 
@@ -9159,7 +9177,7 @@ Error message and password prompt
 
 אולי לא רחוק היום בו נוכל ממש להגיע, למה שקרוי בפינו, כוכבי לכת אחרים. כמובן שמנקודת זמן זו, לא נראה, כי אנחנו אלה שנוכל לשנע עצמינו לשם, כי אם אכן יש משהו בדברים הללו אזי, כאן זה אוסטרליה.
 
-הרעיון שכאן זו גלות, ברגע גרם לי לחשוב על רעיונות להסברים לשלל דברים, אך אם לתמצת אותם למשפט אחד אזי - ובשאיפה למבט מעצים, כמו שאומרים היום - אולי הגלות הזו כאן היא טקס בגרות כלשהו, שאולי אחרי שעוברים אותו, אפשר סוף סוף להגיע לכוכב שלך, שזה אולי מה שהבודהיסטים קוראים [[נירוונה|https://he.wikipedia.org/wiki/%D7%A0%D7%99%D7%A8%D7%95%D7%95%D7%90%D7%A0%D7%94]]. 
+הרעיון שכאן זו גלות, ברגע גרם לי לחשוב על רעיונות להסברים לשלל דברים, אך אם לתמצת אותם למשפט אחד אזי - ובשאיפה למבט מעצים, כמו שאומרים היום - אולי הגלות הזו כאן היא [[טקס בגרות כלשהו|גבריאל פורה]], שאולי אחרי שעוברים אותו, אפשר סוף סוף להגיע לכוכב שלך, שזה אולי מה שהבודהיסטים קוראים [[נירוונה|https://he.wikipedia.org/wiki/%D7%A0%D7%99%D7%A8%D7%95%D7%95%D7%90%D7%A0%D7%94]]. 
 
 
 
@@ -9249,7 +9267,7 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20170105154405192" modified="20170601162027361" tags="[[אחיות חוץ]] [[אירי טוענת]]" title="דיוויד בואי">
+<div created="20170105154405192" modified="20170602183812805" tags="[[אחיות חוץ]] [[אירי טוענת]]" title="דיוויד בואי">
 <pre>[img[pictures/david-bowie.jpg]]
 
 !!![[אירי]]:
@@ -9261,7 +9279,7 @@ Error message and password prompt
 
 אחרי המוות ו[[האלבום החוֹתֵם|https://www.youtube.com/watch?v=kszLwBaC4Sw&amp;list=PL_VDqxGpwYjUPsYUReXDVZM67bJd40na9]]. [[זיגי סטארדאסט|https://www.youtube.com/watch?v=5UQvBzo_rJA&amp;index=6&amp;list=PLuR3CWq59OyrTdWAeVkqH3F6UziQICYeN]]. הדברים שיויו אמר. הסוג של רקוויאם לדעת יויו, שבואי כתב לעצמו - הכול ביחד – חשבתי שבטח עכשיו הוא סוף סוף חוזר לכוכב המקורי שלו, ושאולי בכלל הוא נשלח מאותו כוכב רחוק, לגָלוּת כאן בכדורינו הנידח. 
 
-דיוויד בואי הוא אולי האדם הכי חייזרי במובן הטוב ביותר של המילה, ששהה על הכדור הזה בתקופה הזו, והוא היה הכי שאפשר מכל בחינה שהיא, כולל המגדר הלא מוגדר. הרעיון שכדור הארץ הוא בעצם [[גלות]] תפס אותי. לא פעם חשבתי שיכול להיות שהנשמה יכולה להתגלגל בין כוכבים במרחב האינסופי. כשהייתי ילדה נהגתי לספור את נקודות החן שעל גופי, וחשבתי שבטח החיבור ביניהן הוא צורתו של הכוכב ממנו הגעתי. עד כיתה ב' היו לי 27 נקודות חן, ובערך אז הפסקתי לספור. 
+דיוויד בואי הוא אולי האדם הכי חייזרי במובן הטוב ביותר של המילה, ששהה על הכדור הזה בתקופה הזו, והוא היה הכי שאפשר מכל בחינה שהיא, כולל [[המגדר הלא מוגדר|גבריאל פורה]]. הרעיון שכדור הארץ הוא בעצם [[גלות]] תפס אותי. לא פעם חשבתי שיכול להיות שהנשמה יכולה להתגלגל בין כוכבים במרחב האינסופי. כשהייתי ילדה נהגתי לספור את נקודות החן שעל גופי, וחשבתי שבטח החיבור ביניהן הוא צורתו של הכוכב ממנו הגעתי. עד כיתה ב' היו לי 27 נקודות חן, ובערך אז הפסקתי לספור. 
 
 מצחיק שבאחת מהארוחות שהיו בחג, שיחקנו מן משחק כזה – לו היו נותנים לך לחיות את חייו של מישהו אחר, את חייו של מי היי רוצה לחיות, ויויו אמר מיד: דייוויד בואי. הרעיון כל כך מצא חן בעיני עד שאימצתי אותו, ולמרות שאמרתי שהייתי רוצה להיות [[פרדריק מתיאס אלכסנדר|שיטת אלכסנדר]], בואי נשמע לי הרבה יותר כייף. 
 
@@ -10094,14 +10112,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20161221191920525" modified="20170602165440851" tags="[[אירי טוענת]]" title="הרקוויאם של פורה">
+<div created="20161221191920525" modified="20170603145138963" tags="[[אירי טוענת]]" title="הרקוויאם של פורה">
 <pre>[img[pictures/requiem-faure.jpg]]
 
-אני יושבת כעת על המדרגות שלמרגלות המונמרטרה. המחשב הנייד מונח על ברכיי, ואוזניות סוני גדולות ולבנות, דרכן אני שומעת את הרקוויאם של [[faure|https://en.wikipedia.org/wiki/Requiem_(Faur%C3%A9)]] שאני כל כך אוהבת, מכסות את אוזני.
+אני יושבת כעת על המדרגות שלמרגלות המונמרטר. המחשב הנייד מונח על ברכיי, ואוזניות סוני גדולות ולבנות, דרכן אני שומעת את הרקוויאם של [[faure|https://en.wikipedia.org/wiki/Requiem_(Faur%C3%A9)]] שאני כל כך אוהבת, מכסות את אוזני.
 
 אני מאזינה לביצוע של Choir and Symphony Orchestra of the Ryszard Bukowski Music School in Wrocław, Poland. אני מעדיפה את [[הביצוע הזה|https://www.youtube.com/watch?v=wEgAWjXIxFA]]  גם כשאיני מתבוננת בפניהם היפים והקשובים של חברי התזמורת והמקהלה, ובנברשות התלויות מעל לראשיהם. עוד לא הצלחתי להבין אם תלויות שם שש או שאולי שבע נברשות, שהיו יכולות להתאים לסט של [[חתונת רפאים|http://www.imdb.com/title/tt0121164/]]. הן מוצאות חן בעיני. הן שונות זו מזו בגודל ובצורה אך הן מאותה המשפחה. 
 
-גם הסטודנטית השביעית משמאל בשורת הבנות של המקהלה מוצאת חן בעיני. עלמה יפהפייה שהייתה יכולה בקלות להיות מלוהקת לאחת מההפקות על פי אחד מספריה של ג'יין אוסטין. עיניה נעות בין מחברת הטקסט שמונחת בידיה לבין המנצח ששר בלי קול. אני נעה בין מסמך הוורד לווידאו, מידי פעם מביטה בנוף העיר. קר, אך אני לבושה היטב. הרוח הקרה מוסיפה לדרמה שבתמונה בה אני נמצאת כעת. אצבעותיו הארוכות של עלם האורגן נעות ברכות על הקלידים, ואני חושבת על כך, שאין לדעת מה מסתתר מאחורי הפנים התמימים והיפים הללו של העלמה השרה את המוסיקה של פורה המיוסר. צווארה הארוך וגופה נראים ככלי שרת זך לקולה, שערה החלק והבהיר אסוף לאחור ברישול, ושפתי הלב שלה שרות In Paradisum. רגע הריחוף שלאחר השחרור. עיניה הירוקות נפערות וחיוך צדי עולה על שפתיה ואני שרה: בגן עדן, ילד מתוק שלי, הגעת, אלי, לידי, לחיקי, לבי, כאן בקודש, [[גולה|גלות]] תמיד. סגרתי את חלון היו טיוב לפני שהחלו מחיאות הכפיים, והסרתי מעלי את האוזניות. צומת סואן מחשבות המה בראשי, ויותר מכול נמלאתי עצב מכך, שמה שראיתי כשהבטתי על עצמי באופן לא מעורב ככל שאפשר, כמו ש[[רוז'ה]] לימד אותנו, זה עד כמה אני זקוקה לאהבה. הכנסתי את המחשב והאוזניות לתיק הגב. </pre>
+גם הסטודנטית השביעית משמאל בשורת הבנות של המקהלה מוצאת חן בעיני. עלמה יפהפייה שהייתה יכולה בקלות להיות מלוהקת לאחת מההפקות על פי אחד מספריה של ג'יין אוסטין. עיניה נעות בין מחברת הטקסט שמונחת בידיה לבין המנצח ששר בלי קול. אני נעה בין מסמך הוורד לווידאו, מידי פעם מביטה בנוף העיר. קר, אך אני לבושה היטב. הרוח הקרה מוסיפה לדרמה שבתמונה בה אני נמצאת כעת. אצבעותיו הארוכות של עלם האורגן נעות ברכות על הקלידים, ואני חושבת על כך, שאין לדעת מה מסתתר מאחורי הפנים התמימים והיפים הללו של העלמה השרה את המוסיקה של [[פורה המיוסר|גבריאל פורה]]. צווארה הארוך וגופה נראים ככלי שרת זך לקולה, שערה החלק והבהיר אסוף לאחור ברישול, ושפתי הלב שלה שרות In Paradisum. רגע הריחוף שלאחר השחרור. עיניה הירוקות נפערות וחיוך צדי עולה על שפתיה ואני שרה: בגן עדן, ילד מתוק שלי, הגעת, אלי, לידי, לחיקי, לבי, כאן בקודש, [[גולה|גלות]] תמיד. סגרתי את חלון היו טיוב לפני שהחלו מחיאות הכפיים, והסרתי מעלי את האוזניות. צומת סואן מחשבות המה בראשי, ויותר מכול נמלאתי עצב מכך, שמה שראיתי כשהבטתי על עצמי באופן לא מעורב ככל שאפשר, כמו ש[[רוז'ה]] לימד אותנו, זה עד כמה אני זקוקה לאהבה. הכנסתי את המחשב והאוזניות לתיק הגב. </pre>
 </div>
 <div created="20170602111237129" modified="20170602125320705" tags="[[אחיות חוץ]]" title="וויקליף ז'אן">
 <pre>[img[pictures/wyclef-jean.jpg]]
@@ -11841,6 +11859,13 @@ May the lord bless your soul, I love you girl</pre>
 
 </pre>
 </div>
+<div created="20170603193440578" modified="20170604000151074" tags="[[אחיות חוץ]] [[אירי טוענת]]" title="פ.מ.אלכסנדר">
+<pre>[img[pictures/f-m-alexander.jpg]]
+
+!!![[אירי]]:
+
+כשחקן צעיר נטה [[אלכסנדר|https://he.wikipedia.org/wiki/%D7%A4%D7%A8%D7%93%D7%A8%D7%99%D7%A7_%D7%9E%D7%AA%D7%99%D7%90%D7%A1_%D7%90%D7%9C%D7%9B%D7%A1%D7%A0%D7%93%D7%A8]] להצטרד בזמן שהופיע. הוא החל לחקור את התופעה, וכך פיתח את [[השיטה|שיטת אלכסנדר]], שאני מעריצה.</pre>
+</div>
 <div created="20170415150652294" modified="20170415191348362" tags="[[מתכוני ארוחת הכריסמס]]" title="פאי אגסים עם קרם גבינה ושקדים">
 <pre>[img[pictures/pie-agasim.jpg]]
 
@@ -12276,6 +12301,18 @@ Fapina''
 
 [[התסריטאי והבמאי|https://he.wikipedia.org/wiki/%D7%A6%27%D7%90%D7%A8%D7%9C%D7%99_%D7%A7%D7%90%D7%95%D7%A4%D7%9E%D7%9F]]</pre>
 </div>
+<div created="20170602205356227" modified="20170604000029267" tags="[[אירי טוענת]]" title="צווארים">
+<pre>[img[pictures/zavarim.jpg]]
+
+!!![[אירי]]:
+
+[[כשאלכסנדר|פ.מ.אלכסנדר]] אומר להניח לצוואר להיות חופשי, הוא מתכוון כמובן, לחלק שמחבר בין הגוף לראש,  ממנו מתחילה שרשרת הכיוונים. 
+
+[[בשוכבי בהודו על המזרון|מחפשת את אירי]], ראיתי כל מפרק ומפרק כצוואר, הנחתי לו להיות חופשי, נתתי לראשו ללכת קדימה ולמעלה, להתארך ולהתרחב.
+
+
+</pre>
+</div>
 <div created="20170412170336651" modified="20170412203254735" tags="[[מתכוני ארוחת הכריסמס]]" title="צלי בשר עם תפוחי אדמה">
 <pre>[img[pictures/zli-bakar.jpg]]
 
@@ -12702,14 +12739,19 @@ Fapina''
 [img[pictures/qJoUOLqvuzPjy1Pr.jpg]]
 </pre>
 </div>
-<div created="20161206222443036" modified="20170601162045976" tags="[[אירי טוענת]]" title="שיטת אלכסנדר">
+<div created="20161206222443036" modified="20170603232519250" tags="[[אירי טוענת]]" title="שיטת אלכסנדר">
 <pre>[img[pictures/shitat-alexander.jpg]]
 
 !!![[אירי]]:
 
-בנערותי סבלתי מכאבי גב חזקים שהתבררו כעקמת שנבעה מצמיחה מהירה לגובה. בין גיל 14 ל-15 נוספו לי 12 סנטימטרים וגובהי הסופי הגיע ל- 172 ס&quot;מ. אמי לקחה אותי לכל סוגי המרפאים והרופאים וכך נתקלתי לראשונה [[בשיטת אלכסנדר|https://he.wikipedia.org/wiki/%D7%A9%D7%99%D7%98%D7%AA_%D7%90%D7%9C%D7%9B%D7%A1%D7%A0%D7%93%D7%A8]]. די מהר הוחלט שאצטרך ללבוש סד שיישר את גבי ונטשתי גם את כל הדברים האחרים. בסוף השרות הצבאי הכאבים חזרו והחלטתי לנסות שוב את השיטה ומאז אני הולכת כל שבוע לשיעור ואף מניחה את הגב מידי יום בעצמי. לקח לי לפחות שנה עד שהצלחתי להבין את שלושת המשפטים הבסיסיים עליהם מושתתת העבודה כולה. 
 
-להניח לצוואר להיות חופשי
+בנערותי סבלתי מכאבי גב חזקים, שהתבררו כעקמת, שנבעה מצמיחה מהירה לגובה. בין גיל 14 ל-15 נוספו  12 סנטימטרים לגובהי, שהגיע ל- 172 ס&quot;מ. אמי לקחה אותי לכל סוגי המרפאים והרופאים וכך נתקלתי לראשונה [[בשיטת אלכסנדר|https://he.wikipedia.org/wiki/%D7%A9%D7%99%D7%98%D7%AA_%D7%90%D7%9C%D7%9B%D7%A1%D7%A0%D7%93%D7%A8]].  
+
+[[אלכסנדר|פ.מ.אלכסנדר]]  שלקה בקולו גילה, שהדבר נובע מליקוי בהתנהגותו הגופנית והנפשית. 
+
+די מהר הוחלט שאצטרך ללבוש סד שיישר את גבי ונטשתי גם את האלכסנדר. בסוף השרות הצבאי הכאבים חזרו, החלטתי לנסות שוב את השיטה, ומאז אני הולכת כל שבוע לשיעור, ואף מניחה את הגב מידי יום בעצמי. לקח לי לפחות שנה עד שהצלחתי להבין את שלושת המשפטים הבסיסיים עליהם מושתתת העבודה כולה:
+
+להניח [[לצוואר|צווארים]] להיות חופשי
 
 כדי לתת לראש ללכת קדימה ולמעלה.
 
@@ -12928,6 +12970,25 @@ Fapina''
 </div>
 <div _canonical_uri="pictures/bjVmMLrT1A6cNJ2g.jpg" created="20161024112200319" modified="20170119202336098" tags="" title="bg" type="image/jpeg">
 <pre></pre>
+</div>
+<div created="20170601232601606" draft.of="עם יויו באמסטרדם" draft.title="עם יויו באמסטרדם" modified="20170604000456111" tags="[[אחות כהן]] [[נאמני הגנזך]]" title="Draft of 'עם יויו באמסטרדם'">
+<pre>[img[pictures/amsterdam-im-yoyo.jpg]]
+
+!!![[גורה]]:
+
+בנובמבר 2016 [[יויו]] לקח אותי לאמסטרדם, כדי לעזור לי להשתחרר [[מארועי יוני|דןדן נסע]].
+
+אין מה לבוא לאדם בטענות על כך שהלך, זה מותר, לכל הצדדים. כן, צריכים להיות הגונים, כל הצדדים, גם מי שנשאר כועס, צריך להיות הוגן והגון - כנראה שקודם כל עם עצמו.
+
+כמעט ואיבדתי את זה לכמה חודשים, אך [[האתר שלנו|האחיות כהן]] מציל אותי.
+
+[[בשמי|וויקליף ז'אן]] ובשם [[וויקליף ז'אן|https://www.youtube.com/watch?v=kI6MWZrl8v8&amp;list=RDkI6MWZrl8v8]], ובליווי כלי מיתר ראויים:
+
+
+I wanna dedicate this song, Gone 'Til November...
+To all you ladies out there, crying all alone in your room
+And all you fellas, going down south...Not making it back...
+May the lord bless your soul, I love you girl</pre>
 </div>
 <div created="20161024110225652" modified="20161024125352292" tags="LTR" title="English">
 <pre>This item is in English.
