--- a/index.html
+++ b/index.html
@@ -627,8 +627,6 @@ Error message and password prompt
 
 <li>bg</li>
 
-<li>Draft of 'עם יויו באמסטרדם'</li>
-
 <li>English</li>
 
 <li>HH</li>
@@ -8455,7 +8453,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[קפיץ ספירלי]] [[אירי טוענת]] [[עושים שלום]] [[יויו וגורה]] אלה [[עם יויו באמסטרדם]] [[Draft of 'עם יויו באמסטרדם']] [[דןדן נסע]] יויו [[וויקליף ז'אן]] [[לורין היל]] [[גבריאל פורה]] [[הרקוויאם של פורה]] [[שיטת אלכסנדר]] גלות [[דיוויד בואי]] צווארים [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[עם יויו באמסטרדם]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -11789,7 +11787,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170601232601606" modified="20170602163623154" tags="[[אחות כהן]] [[נאמני הגנזך]]" title="עם יויו באמסטרדם">
+<div created="20170601232601606" modified="20170604000956014" tags="[[אחות כהן]] [[נאמני הגנזך]]" title="עם יויו באמסטרדם">
 <pre>[img[pictures/amsterdam-im-yoyo.jpg]]
 
 !!![[גורה]]:
@@ -11800,7 +11798,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 כמעט ואיבדתי את זה לכמה חודשים, אך [[האתר שלנו|האחיות כהן]] מציל אותי.
 
-[[בשמי|וויקליף ז'אן]] ובשם [[וויקליף ז'אן|https://www.youtube.com/watch?v=kI6MWZrl8v8&amp;list=RDkI6MWZrl8v8]], בליווי כלי מיתר ראויים:
+[[בשמי|וויקליף ז'אן]] ובשם [[וויקליף ז'אן|https://www.youtube.com/watch?v=kI6MWZrl8v8&amp;list=RDkI6MWZrl8v8]], ובליווי כלי מיתר ראויים:
 
 
 I wanna dedicate this song, Gone 'Til November...
@@ -12970,25 +12968,6 @@ Fapina''
 </div>
 <div _canonical_uri="pictures/bjVmMLrT1A6cNJ2g.jpg" created="20161024112200319" modified="20170119202336098" tags="" title="bg" type="image/jpeg">
 <pre></pre>
-</div>
-<div created="20170601232601606" draft.of="עם יויו באמסטרדם" draft.title="עם יויו באמסטרדם" modified="20170604000456111" tags="[[אחות כהן]] [[נאמני הגנזך]]" title="Draft of 'עם יויו באמסטרדם'">
-<pre>[img[pictures/amsterdam-im-yoyo.jpg]]
-
-!!![[גורה]]:
-
-בנובמבר 2016 [[יויו]] לקח אותי לאמסטרדם, כדי לעזור לי להשתחרר [[מארועי יוני|דןדן נסע]].
-
-אין מה לבוא לאדם בטענות על כך שהלך, זה מותר, לכל הצדדים. כן, צריכים להיות הגונים, כל הצדדים, גם מי שנשאר כועס, צריך להיות הוגן והגון - כנראה שקודם כל עם עצמו.
-
-כמעט ואיבדתי את זה לכמה חודשים, אך [[האתר שלנו|האחיות כהן]] מציל אותי.
-
-[[בשמי|וויקליף ז'אן]] ובשם [[וויקליף ז'אן|https://www.youtube.com/watch?v=kI6MWZrl8v8&amp;list=RDkI6MWZrl8v8]], ובליווי כלי מיתר ראויים:
-
-
-I wanna dedicate this song, Gone 'Til November...
-To all you ladies out there, crying all alone in your room
-And all you fellas, going down south...Not making it back...
-May the lord bless your soul, I love you girl</pre>
 </div>
 <div created="20161024110225652" modified="20161024125352292" tags="LTR" title="English">
 <pre>This item is in English.
