--- a/index.html
+++ b/index.html
@@ -8453,7 +8453,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[עם יויו באמסטרדם]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="אווה [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8633,8 +8633,8 @@ Error message and password prompt
 
 אודליה היא אחות קיי שסוחרת באמנות. לבושה בשיא הסטייל, יודעת טאנטרה, חתיכה לאללה, לא מקומית, משיגה כל מה שהיא רוצה, רווקה, צעירה מהאחרות. </pre>
 </div>
-<div created="20161213185747995" modified="20170508144204818" title="אווה">
-<pre>[img[pictures/WPVp164B1ILtM0CO.JPG]]
+<div created="20161213185747995" modified="20170604210227183" title="אווה">
+<pre>[img[pictures/eva-veyoyo.jpg]]
 
 ''או בשמה המלא, אווה כהן.''
 
@@ -8648,7 +8648,7 @@ Error message and password prompt
 
 כאן זו [[אווה]], האם והאחות של האחיות כהן, יויו אחי היקר והאהוב שמבוגר ממני בעשר שנים, שבימיו הקשים ניחם עצמו בשני אחים זכרים בימאים, שהסבו לו הנאה אדירה. 
 
-זה היה בימים שאחרי [[אלה]] בהם החל להאמין באלוהים. הוא חשב על יצירה ועל קבוצת יצירה.
+זה היה בימים שאחרי [[אלה]], בהם החל להאמין באלוהים. הוא חשב על יצירה ועל קבוצת יצירה.
 
 הוא ראה עצמו כאווה כהן, קונדיטורית הונגריה ועסיסית. לא [[פפינלית|פפינה]] חלילה, כי אם חושנית ויצירתית כמעיין נובע.
 
@@ -8813,12 +8813,12 @@ Error message and password prompt
 
 איריס בתה של אווה, היא ילדה זרחנית. זורחת באור ובחושך.</pre>
 </div>
-<div created="20170415200315789" modified="20170419210535156" tags="[[אחיות חוץ]]" title="איתן וג'ואל כהן">
+<div created="20170415200315789" modified="20170604143942923" tags="[[אחיות חוץ]]" title="איתן וג'ואל כהן">
 <pre>[img[pictures/cohen-brothers.jpg]]
 
 !!![[גורה]]:
 
-  [[האחים איתן וג'ואל כהן|https://he.wikipedia.org/wiki/%D7%94%D7%90%D7%97%D7%99%D7%9D_%D7%9B%D7%94%D7%9F]], שיויו אימץ בתחילת שנות האלפיים, והפך אותם לאחיו, ואת עצמו לאווה כהן, אחותם - שהיא קונדיטורית הונגריה.
+  [[האחים איתן וג'ואל כהן|https://he.wikipedia.org/wiki/%D7%94%D7%90%D7%97%D7%99%D7%9D_%D7%9B%D7%94%D7%9F]], שיויו אימץ בתחילת שנות האלפיים, והפך אותם לאחיו, ואת עצמו [[לאווה כהן|אווה]], אחותם - שהיא קונדיטורית הונגריה, היו [[ראשית|מצפה ראשית]] [[האחיות|המעבדה]].
 
 
 
@@ -9163,7 +9163,7 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20170105170620001" modified="20170603235316891" tags="[[אירי טוענת]]" title="גלות">
+<div created="20170105170620001" modified="20170604134709940" tags="[[אירי טוענת]]" title="גלות">
 <pre>[img[pictures/galoot.jpg]]
 
 
@@ -9175,7 +9175,7 @@ Error message and password prompt
 
 אולי לא רחוק היום בו נוכל ממש להגיע, למה שקרוי בפינו, כוכבי לכת אחרים. כמובן שמנקודת זמן זו, לא נראה, כי אנחנו אלה שנוכל לשנע עצמינו לשם, כי אם אכן יש משהו בדברים הללו אזי, כאן זה אוסטרליה.
 
-הרעיון שכאן זו גלות, ברגע גרם לי לחשוב על רעיונות להסברים לשלל דברים, אך אם לתמצת אותם למשפט אחד אזי - ובשאיפה למבט מעצים, כמו שאומרים היום - אולי הגלות הזו כאן היא [[טקס בגרות כלשהו|גבריאל פורה]], שאולי אחרי שעוברים אותו, אפשר סוף סוף להגיע לכוכב שלך, שזה אולי מה שהבודהיסטים קוראים [[נירוונה|https://he.wikipedia.org/wiki/%D7%A0%D7%99%D7%A8%D7%95%D7%95%D7%90%D7%A0%D7%94]]. 
+הרעיון שכאן זו גלות, ברגע גרם לי לחשוב על רעיונות להסברים לשלל דברים, אך אם לתמצת אותם למשפט אחד אזי - ובשאיפה למבט מעצים, כמו שאומרים היום - אולי הגלות הזו כאן, היא [[טקס בגרות כלשהו|גבריאל פורה]], שאולי אחרי שעוברים אותו, אפשר סוף סוף להגיע לכוכב שלך, שזה אולי מה שהבודהיסטים קוראים [[נירוונה|https://he.wikipedia.org/wiki/%D7%A0%D7%99%D7%A8%D7%95%D7%95%D7%90%D7%A0%D7%94]]. 
 
 
 
@@ -9647,7 +9647,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 זואי. המטפלת השמחה-עצובה. ראש קופירייטרי, טיפולית, דואגת לכל, יכולה להתגייס לתחמנויות, יכולת משחק, מסאז'יסטית, לוק תמים, חרוצה, מתכננת.</pre>
 </div>
-<div created="20161113192814802" modified="20170523152812611" title="המעבדה">
+<div created="20161113192814802" modified="20170604143905675" title="המעבדה">
 <pre>[img[pictures/hamaabada.jpg]]
 
 ''כאן היינו''
@@ -9656,7 +9656,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 [[כשהיינו כאן|בחוות החיות]], הדשא שלפני הבית היה גדול, והגיע עד לירידה לנחל. בסתיו ובחורף הוא היה  משופע פרחים. נרקיסים, רקפות, כלניות.
 
-למעשה יויו התגורר כאן, בתקופה שהתחבר [[למקלדת|מקלדת]] והפך לאווה כהן, ואני הייתי על תקן האחות, שמבקרת לעתים תכופות.
+למעשה יויו התגורר כאן, בתקופה שהתחבר [[למקלדת|מקלדת]] והפך [[לאווה כהן|אווה]], ואני הייתי על תקן האחות, שמבקרת לעתים תכופות.
 
 כך כתבנו אז:
 
@@ -11857,12 +11857,12 @@ May the lord bless your soul, I love you girl</pre>
 
 </pre>
 </div>
-<div created="20170603193440578" modified="20170604000151074" tags="[[אחיות חוץ]] [[אירי טוענת]]" title="פ.מ.אלכסנדר">
+<div created="20170603193440578" modified="20170604134857056" tags="[[אחיות חוץ]] [[אירי טוענת]]" title="פ.מ.אלכסנדר">
 <pre>[img[pictures/f-m-alexander.jpg]]
 
 !!![[אירי]]:
 
-כשחקן צעיר נטה [[אלכסנדר|https://he.wikipedia.org/wiki/%D7%A4%D7%A8%D7%93%D7%A8%D7%99%D7%A7_%D7%9E%D7%AA%D7%99%D7%90%D7%A1_%D7%90%D7%9C%D7%9B%D7%A1%D7%A0%D7%93%D7%A8]] להצטרד בזמן שהופיע. הוא החל לחקור את התופעה, וכך פיתח את [[השיטה|שיטת אלכסנדר]], שאני מעריצה.</pre>
+כשחקן צעיר נטה [[אלכסנדר|https://he.wikipedia.org/wiki/%D7%A4%D7%A8%D7%93%D7%A8%D7%99%D7%A7_%D7%9E%D7%AA%D7%99%D7%90%D7%A1_%D7%90%D7%9C%D7%9B%D7%A1%D7%A0%D7%93%D7%A8]] להצטרד בזמן שהופיע. הוא החל לחקור את התופעה, וכך פיתח את [[השיטה|שיטת אלכסנדר]].</pre>
 </div>
 <div created="20170415150652294" modified="20170415191348362" tags="[[מתכוני ארוחת הכריסמס]]" title="פאי אגסים עם קרם גבינה ושקדים">
 <pre>[img[pictures/pie-agasim.jpg]]
@@ -12174,12 +12174,12 @@ __אופן ההכנה____
 
 </pre>
 </div>
-<div created="20170417192958980" modified="20170423203121130" tags="[[אחיות חוץ]]" title="פיליפ סימור הופמן">
+<div created="20170417192958980" modified="20170604144119114" tags="[[אחיות חוץ]]" title="פיליפ סימור הופמן">
 <pre>[img[pictures/Philip-Seymour-Hoffman.jpg]]
 
 !!![[יויו]]:
 
-נכון שהוא היה חור תחת בבביג לובובסקי (של [[האחים כהן|איתן וג'ואל כהן]]), אבל הוא עשה את זה טוב, והוא גם היה בסינקדוכה ניו- יורק (של [[צ'רלי קאופמן]], שגם אותו אני מחשיב [[לאחות חוץ|אחיות חוץ]]. 
+נכון שהוא היה חור תחת בביג לובובסקי של [[האחים כהן|איתן וג'ואל כהן]], אבל הוא עשה את זה טוב, והוא גם היה בסינקדוכה ניו- יורק של [[צ'רלי קאופמן]], שגם אותו אני מחשיב [[לאחות חוץ|אחיות חוץ]]. 
 
 אוהב אותו כאחות,
 
