אווה ויויו ותיקונים

--- a/index.html
+++ b/index.html
@@ -8453,7 +8453,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="אווה [[האחיות כהן]]" title="$:/StoryList">
+<div list="דןדן הדירה פעם" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8473,8 +8473,8 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170602205336293" title="$:/temp/search">
-<pre></pre>
+<div created="20161023184814872" modified="20170605164513575" title="$:/temp/search">
+<pre>מונמרטרה</pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
 <pre>loaded</pre>
@@ -9309,13 +9309,13 @@ Error message and password prompt
 
 אני אומנם מטופלת מכל הכוונים, אבל רק לאחרונה, אחרי [[שדןדן נסע|דןדן נסע]], יויו צילם אותי בוידאו משתוללת על אלפרד, וזה נראה פויה. ממש מביך.</pre>
 </div>
-<div created="20161116210610208" modified="20170505125953934" tags="[[אחות כהן]]" title="דןדן">
+<div created="20161116210610208" modified="20170605164540478" tags="[[אחות כהן]]" title="דןדן">
 <pre>[img[pictures/dandan.jpg]]
 
 !!![[דןדן]]:
 
 אני לא כזה, מהאנשים הטכנולוגיים. אני יודע לעשות דברים עם הידיים אבל אני לא טוב במכשירים. אני טוב בלשטוף כלים ולעשות סדר. אני אוהב לשייף. לצבוע.
-אני אוהב להכניס למגירה של מכונת הכביסה את אבקת הכביסה בתא השמאלי, ובתא האמצעי את המרכך. לסגור את המגירה תוך כדי שאני מכוון את התכנית בטאץ', ושומע את המכונה מתחילה לפעול. אני אוהב את הימים בהם אני מתעורר בקלות ויוצא עם אירי להליכת הבוקר שלה. אני אוהב לשבת עם אלפרד על מדרגות המונמרטרה לפנות בוקר ולעשן ג'ויינט. אני אוהב שז'נבייב מחבקת אותי לשלום כשאנחנו מסיימים יום עבודה, ואומרת לי שאני נהדר ושהיא אוהבת אותי. 
+אני אוהב להכניס למגירה של מכונת הכביסה את אבקת הכביסה בתא השמאלי, ובתא האמצעי את המרכך. לסגור את המגירה תוך כדי שאני מכוון את התכנית בטאץ', ושומע את המכונה מתחילה לפעול. אני אוהב את הימים בהם אני מתעורר בקלות ויוצא עם אירי להליכת הבוקר שלה. אני אוהב לשבת עם אלפרד על מדרגות המונמרטר לפנות בוקר ולעשן ג'ויינט. אני אוהב שז'נבייב מחבקת אותי לשלום כשאנחנו מסיימים יום עבודה, ואומרת לי שאני נהדר ושהיא אוהבת אותי. 
 עד שהכרתי את יויו וחבורתו לא היו לי חברים ממש. רוב חיי זזתי ממקום למקום, ובגיל העשרה הייתי דילר בניו יורק. בחלק מהמקומות בהם גרתי היו לי חברים, אך לא שמרתי על קשר עם אף אחד מהם. אני מסוגל לשכב שעות בלי לזוז. אני יודע להקשיב לדיבורים. אבא שלי היה יכול לדבר שעות בלי להפסיק.
 
 לפעמים אני מתגעגע לדודי מו ולאימא, אבל זה לא שאני באמת צריך לראות אותם. לפעמים אני חושב על אבא ומתגעגע אליו. אני אוהב להיות לבד בחגים. אני אוהב לשוטט בערים המקושטות כשהן ריקות, ורק הבודדים מסתובבים ברחובות. אני אוהב לקנות לעצמי איזו ארוחה במכולת כלשהי, ללכת הבייתה ולעשות מקלחת ארוכה וחמה. לשכב מול הטלוויזיה, ולהעביר ערוצים.
@@ -9467,14 +9467,14 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 כשהדוד הגיע אלינו, די מהר, [[הכל התחיל להסתדר במקום|https://thedod.github.io/]].</pre>
 </div>
-<div created="20161112194346716" modified="20170508145842608" title="הדירה">
+<div created="20161112194346716" modified="20170605164505357" title="הדירה">
 <pre>''הסקיצה ראשונית של יויו לדירה הריקה''
  
 [img[pictures/hadira.jpg]]
 
 !!![[אווה]]:
 
-בדצמבר [[יויו]], [[גורה]] [[ודןדן|דןדן]], עברו לדירה ענקית, שנפלה לידיהם במחיר נמוך מאד, ושהייתה ריקה מכל תוכן. עניין של מזל בסדרי גודל גבוהים. זו דירה שגודלה שלוש מאות מטרים רבועים, מלבן של 25/12 לא כולל המרפסת. היא נמצאת בקומה שנייה בבניין רחב מתחת ל[[מונמרטרה|https://he.wikipedia.org/wiki/%D7%9E%D7%95%D7%A0%D7%9E%D7%90%D7%A8%D7%98%D7%A8]]. הם סידרו אותה מאפס כולל קירות וכולל החלפת כל החשמל והאינסטלציה שהיו במצב מסוכן, ובתמורה קיבלו את החוזה הזה לשלוש שנים או עד שיימצא פתרון לדירה שאף אדם לא רצה להתעסק אתה, בשלב זה, מסיבה שלא סופרה להם. הם לא נכנסו לשאלות בעניין. הם באו לראות אותה דרך עורך דין שנהג לאכול ב[[קוסקוס|הקוסקוס]], וברגע שנכנסו הייתה להם הרגשה טובה. 
+בדצמבר [[יויו]], [[גורה]] [[ודןדן|דןדן]], עברו לדירה ענקית, שנפלה לידיהם במחיר נמוך מאד, ושהייתה ריקה מכל תוכן. עניין של מזל בסדרי גודל גבוהים. זו דירה שגודלה שלוש מאות מטרים רבועים, מלבן של 25/12 לא כולל המרפסת. היא נמצאת בקומה שנייה בבניין רחב מתחת ל[[מונמרטר|https://he.wikipedia.org/wiki/%D7%9E%D7%95%D7%A0%D7%9E%D7%90%D7%A8%D7%98%D7%A8]]. הם סידרו אותה מאפס כולל קירות וכולל החלפת כל החשמל והאינסטלציה שהיו במצב מסוכן, ובתמורה קיבלו את החוזה הזה לשלוש שנים או עד שיימצא פתרון לדירה שאף אדם לא רצה להתעסק אתה, בשלב זה, מסיבה שלא סופרה להם. הם לא נכנסו לשאלות בעניין. הם באו לראות אותה דרך עורך דין שנהג לאכול ב[[קוסקוס|הקוסקוס]], וברגע שנכנסו הייתה להם הרגשה טובה. 
 הגודל או העונק, קראו לזה איך שתקראו לזה, הממו אותם, והם סגרו חוזה. הם עבדו חודש וחצי סביב השעון בלי לעצור כולל העבודה אצל ז'נבייב. יויו נדלק. הוא מצא תוכנה חינמית לעיצוב פנים והלך על זה בכל הכוח. הם לקחו לימים האלה חמשה עובדים סינים, שעבדו בעבר עבור [[ז'נבייב]]. את עבודתם הפיק בפועל [[אלפרד]] לפי הוראות מסודרות של יויו. [[הסינים]] היו מקצוענים. בערבים שחזרו מהעבודה המשיכו עוד כמה שעות. מידי ערב יויו עבר על כל דבר. בדק, ניקה, שייף מה שצריך ודןדן אתו. הם חילקו את הדירה לשלושה חלקים. בחלק האמצעי, לטובתו הקצו 120 מטרים רבועים, בנו מטבח וסלון, חדר שרות, מקלחת ושירותים. בשני האחרים שגודלם היה 80 מטרים רבועים הוסיפו רק חדרי אמבטיה ושירותים והשאירו הכול פתוח. לכל חדר יש צד שפונה אל הרחוב ולו חלון ענקי ולכל אלה מרפסת אחת גדולה. קירות הגבס שבנו היו בכל מיני אלכסונים שתוכננו בסימטריה מלאה וצבועים כולם לבן. לכל אחד מהחדרים, לעומת זאת, אריחים רבועים בצבע שונה. בסלון ובמטבח המרצפות ירוקות, בחדר של גורה ודןדן צהובות ואצל יויו תכולות. במבואת הכניסה הן בחרדל ואדום. על המרפסת שבחזית הדירה, שמרוצפת במרצפות שיש בגדלים שונים ובצורות שונות, בנוי חדר נוסף שגודלו 18 מטרים רבועים, החדר שימש בעבר [[כקליניקה|הקליניקה]] של רופא ולו יציאה לרחוב. הוא כולל שירותים קטנים וחמימים עם טוש וכיור,</pre>
 </div>
 <div created="20170320180743138" modified="20170507182417605" tags="HH" title="ההוסטל">
@@ -10119,8 +10119,10 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 גם הסטודנטית השביעית משמאל בשורת הבנות של המקהלה מוצאת חן בעיני. עלמה יפהפייה שהייתה יכולה בקלות להיות מלוהקת לאחת מההפקות על פי אחד מספריה של ג'יין אוסטין. עיניה נעות בין מחברת הטקסט שמונחת בידיה לבין המנצח ששר בלי קול. אני נעה בין מסמך הוורד לווידאו, מידי פעם מביטה בנוף העיר. קר, אך אני לבושה היטב. הרוח הקרה מוסיפה לדרמה שבתמונה בה אני נמצאת כעת. אצבעותיו הארוכות של עלם האורגן נעות ברכות על הקלידים, ואני חושבת על כך, שאין לדעת מה מסתתר מאחורי הפנים התמימים והיפים הללו של העלמה השרה את המוסיקה של [[פורה המיוסר|גבריאל פורה]]. צווארה הארוך וגופה נראים ככלי שרת זך לקולה, שערה החלק והבהיר אסוף לאחור ברישול, ושפתי הלב שלה שרות In Paradisum. רגע הריחוף שלאחר השחרור. עיניה הירוקות נפערות וחיוך צדי עולה על שפתיה ואני שרה: בגן עדן, ילד מתוק שלי, הגעת, אלי, לידי, לחיקי, לבי, כאן בקודש, [[גולה|גלות]] תמיד. סגרתי את חלון היו טיוב לפני שהחלו מחיאות הכפיים, והסרתי מעלי את האוזניות. צומת סואן מחשבות המה בראשי, ויותר מכול נמלאתי עצב מכך, שמה שראיתי כשהבטתי על עצמי באופן לא מעורב ככל שאפשר, כמו ש[[רוז'ה]] לימד אותנו, זה עד כמה אני זקוקה לאהבה. הכנסתי את המחשב והאוזניות לתיק הגב. </pre>
 </div>
-<div created="20170602111237129" modified="20170602125320705" tags="[[אחיות חוץ]]" title="וויקליף ז'אן">
+<div created="20170602111237129" modified="20170605124112313" tags="[[אחיות חוץ]]" title="וויקליף ז'אן">
 <pre>[img[pictures/wyclef-jean.jpg]]
+
+!!![[גורה]]:
 
 התלבטתי לגבי [[וויקליף|http://www.imdb.com/name/nm0419889/]], כי הוא גם [[פוליטיקאי]], שזה סוג של [[wrong livelihood|https://en.wikipedia.org/wiki/Noble_Eightfold_Path]], אך יחד עם זה הוא היה עם [[לורינוש|לורין היל]] [[בפוג'יז|http://www.imdb.com/name/nm2131536/?ref_=nm_ov_bio_lk2]]</pre>
 </div>
@@ -11787,14 +11789,16 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170601232601606" modified="20170604000956014" tags="[[אחות כהן]] [[נאמני הגנזך]]" title="עם יויו באמסטרדם">
+<div created="20170601232601606" modified="20170605132302510" tags="[[אחות כהן]] [[נאמני הגנזך]]" title="עם יויו באמסטרדם">
 <pre>[img[pictures/amsterdam-im-yoyo.jpg]]
 
 !!![[גורה]]:
 
-בנובמבר 2016 [[יויו]] לקח אותי לאמסטרדם, כדי לעזור לי להשתחרר [[מארועי יוני|דןדן נסע]].
+בנובמבר 2016 [[יויו]] לקח אותי לאמסטרדם, כדי לעזור לי להשתחרר [[מארועי יוני|דןדן נסע]]. 
 
 אין מה לבוא לאדם בטענות על כך שהלך, זה מותר, לכל הצדדים. כן, צריכים להיות הגונים, כל הצדדים, גם מי שנשאר כועס, צריך להיות הוגן והגון - כנראה שקודם כל עם עצמו.
+
+היה קר, הסתובבנו מעט, דיברנו הרבה, לנו סמוך [[לוונדלפארק|https://en.wikipedia.org/wiki/Vondelpark]] ולאזור המוזיאונים. המקום היחידי שממש רציתי לבקר בו היה [[מוזיאון ואן-גוך|https://en.wikipedia.org/wiki/Van_Gogh_Museum]]. פרט לכאב המכאיב הניכר מציוריו של וינסנט היקר, שיושב כואב ומצייר עוד ועוד, את עצמו, את בית הוריו, את הטבע, את האנשים, ובתור אדם שמצא נתיב בריחה לכאביו בכתיבה, קינאתי באפשרות להעביר תמונה שלימה בלי להזדקק למילים.
 
 כמעט ואיבדתי את זה לכמה חודשים, אך [[האתר שלנו|האחיות כהן]] מציל אותי.
 
@@ -12099,8 +12103,8 @@ __אופן ההכנה____
 
 </pre>
 </div>
-<div created="20161215205302791" modified="20170127135712805" title="פועה">
-<pre>[img[https://i.imgur.com/ZynQAw1.jpg)]]
+<div created="20161215205302791" modified="20170605120036877" title="פועה">
+<pre>[img[pictures/pooa.jpg]]
 
 פועה, האישה והמקימה, נפטרה בינואר 2015.
 
@@ -12251,11 +12255,15 @@ __אופן ההכנה____
 
 </pre>
 </div>
-<div created="20170512173606585" modified="20170512223931338" title="פעם">
-<pre>''
+<div created="20170512173606585" modified="20170605150240454" title="פעם">
+<pre>
+!!![[האחיות כהן]]:
+
+''
 כשהיה מותר לעשן''
 
 [img[pictures/paam-haya-mootar.jpg]]
+
 
 
 &lt;&lt;list-links filter:&quot;[tag[פעם]]&quot;&gt;&gt;
