--- a/index.html
+++ b/index.html
@@ -8344,7 +8344,7 @@ Error message and password prompt
 <pre>{
     &quot;tiddlers&quot;: {
         &quot;Untitled&quot;: {
-            &quot;text&quot;: &quot;file:///C:/Users/user/Desktop/coen%20sisters/pictures/galoot.jpg&quot;,
+            &quot;text&quot;: &quot;מונמרטרה&quot;,
             &quot;title&quot;: &quot;Untitled&quot;
         }
     }
@@ -8453,7 +8453,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="דןדן הדירה פעם" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8473,8 +8473,8 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20170605164513575" title="$:/temp/search">
-<pre>מונמרטרה</pre>
+<div created="20161023184814872" modified="20170605203509346" title="$:/temp/search">
+<pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
 <pre>loaded</pre>
@@ -12256,8 +12256,7 @@ __אופן ההכנה____
 </pre>
 </div>
 <div created="20170512173606585" modified="20170605150240454" title="פעם">
-<pre>
-!!![[האחיות כהן]]:
+<pre>!!![[האחיות כהן]]:
 
 ''
 כשהיה מותר לעשן''
